@startuml

title __Methods Package Diagram__\n

    namespace Methods {
      class Methods.AMCWard {
          - transNumber : int
          + AMCWard()
          + changeTransNumber()
          + getAllTransWards()
          + getTransNumber()
          + updateDestinationNumber()
      }
    }

  

    namespace Methods {
      class Methods.AandE {
          {static} - log : Logger
          + AandE()
          + checkAddedPatient()
          + checkExistingId()
          + createPatient()
      }
    }

  

    namespace Methods {
      class Methods.ControlCentre {
          - amcCapacityPerc : float
          - dischargePatients : int
          - freeBeds : int
          - greenPatients : int
          {static} - log : Logger
          - longstayCapacityPerc : float
          - longstayFreeBeds : int
          - orangePatients : int
          - redPatients : int
          - transferPatients : int
          + ControlCentre()
          + findAMUWards()
          + getAmcCapacityPerc()
          + getClient()
          + getDischargePatients()
          + getFreeBeds()
          + getGreenPatients()
          + getLongstayCapacityPerc()
          + getLongstayFreeBeds()
          + getOrangePatients()
          + getRedPatients()
          + getTransferPatients()
          + refresh()
          - amcNumbers()
          - incomingNumbers()
          - longStayNumbers()
      }
    }

  


    namespace Methods {
      abstract class Methods.GeneralWard {
          # amuWardIds : int[]
          # amuWards : ArrayList<Ward>
          # bedStatus : int[]
          # dcWardIds : int[]
          # dcWards : ArrayList<Ward>
          # dischargeNumber : int
          # inNumber : int
          # lsWardIds : int[]
          # lsWards : ArrayList<Ward>
          # othNumber : int
          # othWardIds : int[]
          # othWards : ArrayList<Ward>
          # patientsInWard : int
          # wardId : int
          {static} - log : Logger
          - wardName : String
          + GeneralWard()
          + changeBlackBeds()
          + changeBlueBeds()
          + changeDischargeNumber()
          + changeGreenBeds()
          + changeIncomingNumber()
          + changeOrangeBeds()
          + changeOtherNumber()
          + changePatientsInWard()
          + changeRedBeds()
          + deletePatient()
          + deletePatientFromDatabase()
          + deletePatientUpdateNumbers()
          + editBed()
          + editPatient()
          + getAcceptableBeds()
          {abstract} + getAllTransWards()
          + getAmuWardIds()
          + getBed()
          + getBed()
          + getBedColour()
          + getBedStat()
          + getBedStatus()
          + getBeds()
          + getClient()
          + getDcWardIds()
          + getDischargeNumber()
          + getInNumber()
          + getLsWardIds()
          + getOthNumber()
          + getOthWardIds()
          + getPatient()
          + getPatientsInWard()
          + getTopography()
          + getWardId()
          + getWardInfo()
          + getWardName()
          + getWardType()
          + removePatient()
          + removePatientFromDatabase()
          + setBed()
          + setBedDatabase()
          + setBedStat()
          + setTopography()
          + setWardInfo()
          + transferPatient()
          {abstract} ~ updateDestinationNumber()
          - restOfGetBed()
      }
    }

  


    namespace Methods {
      class Methods.LongstayWard {
          + LongstayWard()
          + getAllTransWards()
          + updateDestinationNumber()
      }
    }

  


    namespace Methods {
      class Methods.dateFormat {
          + dateFormatter()
          + durationFormatter()
      }
    }

  

  Methods.AMCWard -up-|> Methods.GeneralWard
  Methods.AandE o-- Client.Client
  Methods.AandE o-- Client.fromJson
  Methods.ControlCentre o-- Client.Client
  Methods.GeneralWard o-- Client.Client
  Methods.GeneralWard o-- AMCWardPanels.BedStatus
  Methods.GeneralWard o-- AMCWardPanels.Topography
  Methods.GeneralWard o-- AMCWardPanels.WardInfo
  Methods.LongstayWard -up-|> Methods.GeneralWard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
